--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ smart-leds = "0.4.0"
 esp-idf-sys = { version = "0.35.0", features = ["native", "panic_handler"] }
 smart-leds-trait = "0.3.0"
 u8g2-fonts = { version = "0.5.1", features = ["embedded_graphics_textstyle", "std"] }
+embedded-sdmmc = { version = "0.8.1", features = ["log"] }
 
 [dev-dependencies]
 # for examples
