--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,9 @@ embedded-sdmmc = { version = "0.8.1", features = ["log"] }
 embedded-text = { version = "0.7.2", features = ["plugin"] }
 rs-fsrs = { version = "1.2.1" }
 chrono = { version = "0.4.40", features = ["serde"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+heapless = { version = "0.8.0", features = ["serde"] }
 
 [dev-dependencies]
 # for examples
