--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,33 +22,35 @@ default = []
 experimental = ["esp-idf-svc/experimental"]
 
 [dependencies]
-anyhow = "1.0.94"
-log = "0.4"
-esp-idf-svc = { version = "0.49.1", features = ["std", "critical-section", "embassy-time-driver", "embassy-sync"] }
-esp-idf-hal = {version="0.44.1"}
-display-interface = "0.5.0"
-display-interface-spi = "0.5.0"
-mipidsi = "0.8.0"
+# can't up esp-idf-svc to last cuz embassy does'nt support latest extenza rust toolchain
+# if not need embassy - be happy to upgrade
+esp-idf-svc = { version = "0.50.1", features = ["std", "critical-section", "embassy-time-driver"] }
+esp-idf-hal = {version="0.45.2"}
+esp-idf-sys = { version = "0.36.1", features = ["native", "panic_handler"] }
 embedded-hal = "1.0.0"
 embedded-graphics = "0.8.1"
 embedded-fps = { version = "0.1.0", features = ["std"] }
 embedded-graphics-framebuf = "0.5.0"
-ws2812-esp32-rmt-driver = { version = "0.10.0", features = ["embedded-graphics-core", "smart-leds-trait"] }
-smart-leds = "0.4.0"
-esp-idf-sys = { version = "0.35.0", features = ["native", "panic_handler"] }
-smart-leds-trait = "0.3.0"
 u8g2-fonts = { version = "0.5.1", features = ["embedded_graphics_textstyle", "std"] }
-embedded-sdmmc = { version = "0.8.1", features = ["log"] }
 embedded-text = { version = "0.7.2", features = ["plugin"] }
-rs-fsrs = { version = "1.2.1" }
-chrono = { version = "0.4.40", features = ["serde"] }
+display-interface = "0.5.0"
+display-interface-spi = "0.5.0"
+mipidsi = "0.8.0" # can't update cuz codebase change
+embedded-sdmmc = { version = "0.9.0", features = ["log"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 heapless = { version = "0.8.0", features = ["serde"] }
+anyhow = "1.0.94"
+log = "0.4"
+rs-fsrs = { version = "1.2.1" }
+
+# ws2812-esp32-rmt-driver = { version = "0.10.0", features = ["embedded-graphics-core", "smart-leds-trait"] }
+# smart-leds = "0.4.0"
+# smart-leds-trait = "0.3.0"
 
 [dev-dependencies]
 # for examples
 
 [build-dependencies]
-embuild = "0.32.0"
-cc = "=1.1.30" # Version "1.1.30" necessary until a new version of `esp-idf-sys` is released
+embuild = { version = "0.33.0", features = ["espidf"] }
+# cc = "=1.1.30" # Version "1.1.30" necessary until a new version of `esp-idf-sys` is released
